--- a/Sunduk.PWA/Shared/MainLayout.razor
+++ b/Sunduk.PWA/Shared/MainLayout.razor
@@ -28,7 +28,7 @@
         <MudText Typo="Typo.h5"></MudText>
     </TitleContent>
     <DialogContent>
-        <img src="/qr-code.png" asp-append-version="true" width="300px" />
+        <img src="/qr.svg" asp-append-version="true" width="300px" />
     </DialogContent>
     <DialogActions>
         <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="Submit" Class="px-10">OK</MudButton>
