--- a/Sunduk.PWA/Pages/OtherStuffPage.razor
+++ b/Sunduk.PWA/Pages/OtherStuffPage.razor
@@ -1,19 +1,39 @@
 ﻿@page "/stuff"
 
-<MudTabs Elevation="2" Style="margin-top: -2vh">
-    <MudTabPanel Text="Фаска">
-        <ChamferComponent />
-    </MudTabPanel>
-    <MudTabPanel Text="Скругление">
-        <RadiusComponent/>
-    </MudTabPanel>
-    <MudTabPanel Text="Конус сверла">
-        <DrillAngleComponent/>
-    </MudTabPanel>
-</MudTabs>
+
+<MudSwipeArea OnSwipe="@OnSwipe">
+    <MudTabs Elevation="2" Style="margin-top: -2vh" @ref="tabs">
+        <MudTabPanel Text="Фаска">
+            <ChamferComponent />
+        </MudTabPanel>
+        <MudTabPanel Text="Скругление">
+            <RadiusComponent />
+        </MudTabPanel>
+        <MudTabPanel Text="Конус сверла">
+            <DrillAngleComponent />
+        </MudTabPanel>
+    </MudTabs>
+</MudSwipeArea>
 
 @code 
 {
+    MudTabs tabs;
 
-    
+    public void OnSwipe(SwipeDirection direction)
+    {
+        if (direction == SwipeDirection.LeftToRight)
+        {
+            if (tabs.ActivePanelIndex > 0)
+            {
+                tabs.ActivatePanel(tabs.ActivePanelIndex - 1);
+            }
+        }
+        else if (direction == SwipeDirection.RightToLeft)
+        {
+            if(tabs.ActivePanelIndex < 2)
+            {
+                tabs.ActivatePanel(tabs.ActivePanelIndex + 1);
+            }
+        }
+    }
 }
