--- a/Sunduk.PWA/Pages/ChamferComponent.razor
+++ b/Sunduk.PWA/Pages/ChamferComponent.razor
@@ -73,7 +73,8 @@
                 $"G0 X{Util.NCFormat(ChamferType == Chamfer.External ? ChamferResult - 2 * (ChamferInsertRadius + RoundCorner) : ChamferResult + 2 * (ChamferInsertRadius + RoundCorner))} Z1. S180 M3\n" +
                 $"G1 Z0. F0.1\n" +
                 $"X{Util.NCFormat(ChamferResult)} R{Util.NCFormat(ChamferInsertRadius + RoundCorner)}\n" +
-                $"X{Util.NCFormat(ChamferDiameter)} A{(ChamferType == Chamfer.External ? '-' : string.Empty)}{Util.NCFormat(Angle)}";
+                $"X{Util.NCFormat(ChamferDiameter)} A{(ChamferType == Chamfer.External ? '-' : string.Empty)}{Util.NCFormat(Angle)} R{Util.NCFormat(ChamferInsertRadius + RoundCorner)}\n" +
+                $"W-{Util.NCFormat(ChamferInsertRadius + RoundCorner)}";
             }
             return string.Empty;
         }
