--- a/Sunduk.PWA/_Imports.razor
+++ b/Sunduk.PWA/_Imports.razor
@@ -9,5 +9,6 @@
 @using System.Globalization
 @using Sunduk.PWA
 @using Sunduk.PWA.Shared
+@using Sunduk.PWA.Components
 @using Sunduk.PWA.Util
 @using MudBlazor
