--- a/Sunduk.PWA/Shared/NavMenu.razor
+++ b/Sunduk.PWA/Shared/NavMenu.razor
@@ -5,4 +5,5 @@
     <MudNavLink Href="/thread" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.LineWeight">Точение резьбы</MudNavLink>
     <MudNavLink Href="/stuff" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.RoundedCorner">Всякая хрень</MudNavLink>
     <MudNavLink Href="/angle" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.SignalCellularNull">Перевод углов</MudNavLink>
+    <MudNavLink Href="/timecalc" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Timer">Расчеты времени</MudNavLink>
 </MudNavMenu>
