--- a/Sunduk.PWA/Pages/Index.razor
+++ b/Sunduk.PWA/Pages/Index.razor
@@ -42,5 +42,15 @@
                 </MudGrid>
             </MudPaper>
         </MudLink>
+        <MudLink Href="/timecalc" Underline="Underline.None">
+            <MudPaper Class="pa-8 ma-2">
+                <MudGrid Justify="Justify.Center">
+                    <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.Timer" />
+                </MudGrid>
+                <MudGrid Justify="Justify.Center">
+                    <MudText Typo="Typo.caption" Class="mt-4">Расчеты времени</MudText>
+                </MudGrid>
+            </MudPaper>
+        </MudLink>
     </MudGrid>
 </MudContainer>
